--- a/client/components/lists/listHeader.jade
+++ b/client/components/lists/listHeader.jade
@@ -47,6 +47,15 @@ template(name="listHeader")
             if hasNumberFieldsSum
               | &nbsp;
               span.list-sum-badge(title="{{_ 'sum-of-number-fields'}}") ∑ {{numberFieldsSum}}
+
+          div.list-header-menu
+            unless currentUser.isCommentOnly
+              unless currentUser.isReadOnly
+                unless currentUser.isReadAssignedOnly
+                  if canSeeAddCard
+                    a.js-add-card.add-element.list-header-plus-top(title="{{_ 'add-card-to-top-of-list'}}")
+                      i.fa.fa-plus
+                      i.fa.fa-sticky-note
         div.list-header-menu
           unless currentUser.isCommentOnly
             unless currentUser.isReadOnly
@@ -76,22 +85,6 @@ template(name="listHeader")
               if isMiniScreen
                 a.list-header-handle-desktop.handle.js-list-handle(title="{{_ 'drag-list'}}")
                   i.fa.fa-arrows
-        unless collapsed
-          div.list-header-menu
-            unless currentUser.isCommentOnly
-              unless currentUser.isReadOnly
-                unless currentUser.isReadAssignedOnly
-
-                  if isTouchScreenOrShowDesktopDragHandles
-                    a.list-header-handle-desktop.handle.js-list-handle(title="{{_ 'drag-list'}}")
-                      i.fa.fa-arrows
-                  if canSeeAddCard
-                    a.js-add-card.list-header-plus-top(title="{{_ 'add-card-to-top-of-list'}}")
-                      i.fa.fa-plus
-                  //if isBoardAdmin
-                  //  a.fa.js-list-star.list-header-plus-top(class="fa-star{{#unless starred}}-o{{/unless}}")
-                  a.js-open-list-menu(title="{{_ 'listActionPopup-title'}}")
-                    i.fa.fa-bars
       unless isMiniScreen
         if collapsed
           if showCardsCountForList cards.length
@@ -106,32 +99,31 @@ template(name="editListTitleForm")
         i.fa.fa-times-thin
 
 template(name="listActionPopup")
-  unless currentUser.isReadOnly
-    unless currentUser.isReadAssignedOnly
-      ul.pop-over-list
+  ul.pop-over-list
+    unless currentUser.isReadOnly
+      unless currentUser.isReadAssignedOnly
         li
           a.js-add-card.list-header-plus-top
-            i.fa.fa-plus
-            i.fa.fa-arrow-up
+            span
+              i.fa.fa-plus
+              i.fa.fa-arrow-up
             | {{_ 'add-card-to-top-of-list'}}
         li
           a.js-add-card.list-header-plus-bottom
-            i.fa.fa-plus
-            i.fa.fa-arrow-down
+            span
+              i.fa.fa-plus
+              i.fa.fa-arrow-down
             | {{_ 'add-card-to-bottom-of-list'}}
-      hr
-      ul.pop-over-list
+        hr
         li
           a.js-add-list
             i.fa.fa-plus
             | {{_ 'add-list'}}
-      hr
-      ul.pop-over-list
+        hr
         li
           a.js-set-list-width
             i.fa.fa-arrows-h
             |  {{_ 'set-list-width'}}
-  ul.pop-over-list
     li
       a.js-toggle-watch-list
         if isWatching
@@ -140,37 +132,33 @@ template(name="listActionPopup")
         else
           i.fa.fa-eye-slash
           |  {{_ 'watch'}}
-  unless currentUser.isCommentOnly
-    unless currentUser.isReadOnly
-      unless currentUser.isReadAssignedOnly
-        unless currentUser.isWorker
-          ul.pop-over-list
+    unless currentUser.isCommentOnly
+      unless currentUser.isReadOnly
+        unless currentUser.isReadAssignedOnly
+          unless currentUser.isWorker
             li
               a.js-set-color-list
                 i.fa.fa-paint-brush
                 | {{_ 'set-color-list'}}
-        ul.pop-over-list
           if cards.length
             li
               a.js-select-cards
                 i.fa.fa-select-square
                 | {{_ 'list-select-cards'}}
         if currentUser.isBoardAdmin
-          ul.pop-over-list
             li
               a.js-set-wip-limit
                 i.fa.fa-ban
                 | {{#if isWipLimitEnabled }}{{_ 'edit-wip-limit'}}{{else}}{{_ 'setWipLimitPopup-title'}}{{/if}}
-        unless currentUser.isWorker
-          hr
-          ul.pop-over-list
+            hr
+          unless currentUser.isWorker
             li
               a.js-close-list
-                i.fa.fa-arrow-right
-                i.fa.fa-archive
+                span
+                  i.fa.fa-arrow-right
+                  i.fa.fa-archive
                 | {{_ 'archive-list'}}
-        hr
-        ul.pop-over-list
+            hr
           li
             a.js-more
               i.fa.fa-link
