--- a/client/components/main/layouts.css
+++ b/client/components/main/layouts.css
@@ -214,7 +214,7 @@ select,
 .js-color-choice,
 .js-reaction,
 .close {
-  min-height: var(--space-m);
+  min-height: var(--space-l);
   font-size: inherit;
 }
 
@@ -950,50 +950,49 @@ Prevents popups to compute real size, trying to comment
 
   commented colors are useful to visualize/debug
   */
+  > *:has(hr, .full, .at-error) {
+    /* those are siblings */
+    :is(hr, .full, .at-error) ~ *, *:has(~hr, full, .at-error) {
+      &:not(:has(hr, .full, .at-error)) {
+        padding-inline: var(--space-xs);
+        &:not(hr) {
+          padding-block: var(--vspace-xs);
+        }
+        /* background: rgba(255, 0, 0, 0.304); */
+      }
+    }
+    /* those are siblings of ancestors */
+    :not(:has(hr, .full, .at-error)), .full {
+      &:has(~ :is(hr, .full, .at-error)) {
+        padding-inline: var(--space-xs);
+        &:not(hr) {
+          padding-block: var(--vspace-xs);
+        }
+        /* background: rgba(0, 0, 255, 0.339); */
+      }
+    }
 
-  /* those are siblings */
-  :is(hr, .full, .at-error) ~ *, *:has(~hr, full, .at-error) {
-    &:not(:has(hr, .full, .at-error)) {
+    /* and when there is not full width element */
+    &:not(:has(:is(hr, .full, .at-error))) {
       padding-inline: var(--space-xs);
       &:not(hr) {
         padding-block: var(--vspace-xs);
       }
-      /* background: rgba(255, 0, 0, 0.304); */
-    }
-  }
-  /* those are siblings of ancestors */
-  :not(:has(hr, .full, .at-error)), .full {
-    &:has(~ :is(hr, .full, .at-error)) {
-      padding-inline: var(--space-xs);
-      &:not(hr) {
-        padding-block: var(--vspace-xs);
-      }
-      /* background: rgba(0, 0, 255, 0.339); */
+      /* background: rgba(0, 128, 0, 0.34); */
     }
   }
 
-  /* and when there is not full width element */
-  &:not(:has(:is(hr, .full, .at-error))) {
-    padding-inline: var(--space-xs);
-    &:not(hr) {
-      padding-block: var(--vspace-xs);
-    }
-    /* background: rgba(0, 128, 0, 0.34); */
-  }
 
-  /* they can be padded from "root" once, so background apply until borders */
-  .full, .at-error {
+  /* they can be padded from "root" once, so background apply until borders
+  but no do apply in case the full element is the root one */
+  > .full:is(:first-child, :last-child), :is(.full, .at-error), :only-child:is(.full, .at-error) {
     padding-inline: var(--space-xs);
     padding-block: var(--vspace-xs);
+    /* rounded button in full width is strange; but the rule is loose so is may break other things */
+    border-radius: 0;
     /* background: rgba(238, 130, 238, 0.336); */
   }
-
-  .full:is(:first-child, :last-child) {
-    border-radius: 0;
-    padding-block: var(--vspace-l);
-  }
 }
-
 .pop-over-list, .table-grid {
   display: grid !important;
   /* I am not a grid expert, but I think the number of columns is not
@@ -1013,7 +1012,7 @@ Prevents popups to compute real size, trying to comment
     grid-template-columns: subgrid;
     justify-items: start;
     place-content: center;
-    column-gap: var(--space-s);
+    column-gap: var(--space-2xs);
     grid-column: 1/-1;
     > {
       display: grid;
